--- a/themes/hallo/assets/scss/hallo/_cards.scss
+++ b/themes/hallo/assets/scss/hallo/_cards.scss
@@ -84,7 +84,7 @@
     padding: 9px 20px;
     border: 1px solid var(--grey);
     border-radius: 1000px;
-    background: transparentize($color: #000000, $amount: 0.5);
+    background: transparentize(#000000, 0.5);
     transition: 0.3s;
   }
 }
