update the website for meta tags

--- a/themes/hallo/layouts/partials/head.html
+++ b/themes/hallo/layouts/partials/head.html
@@ -7,6 +7,13 @@
         <meta name="description" content="{{ .Description }}">
     {{- end }}
 
+    <!-- meta tags social -->
+    <meta property="og:title" content="Ashley Ivy Hutson's Personal Data">
+    <meta property="og:description" content="Screw privacy, Here is my data.">
+    <meta property="og:image" content="https://www.screwmyprivacy.com/images/portrait.jpg">
+    <meta property="og:url" content="https://www.screwmyprivacy.com">
+    <meta name="twitter:card" content="summary_large_image">
+
     <title>
         {{- if .IsHome }}
             {{ .Site.Title }}
