--- a/layouts/partials/introduction.html
+++ b/layouts/partials/introduction.html
@@ -188,7 +188,7 @@
           <div class="img-bg"></div>
           <img
             src="https://images.unsplash.com/photo-1583246460798-0efe7e9bc4ec?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"
-            alt="Dog"
+            alt="memphis"
           />
           <figcaption>Birth City</figcaption>
         </figure>
@@ -200,11 +200,41 @@
           <div class="img-bg"></div>
           <img
             src="https://images.unsplash.com/photo-1583246460798-0efe7e9bc4ec?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"
-            alt="Dog"
+            alt="memphis"
           />
         </figure>
 
         <span class="design">Memphis TN</span>
+      </div>
+    </div>
+  </div>
+  <!-- /flip-card-container -->
+
+  <!-- flip-card-container -->
+  <div class="flip-card-container" style="--hue: 350">
+    <div class="flip-card">
+      <div class="card-front">
+        <figure>
+          <div class="img-bg"></div>
+          <img
+            src="https://images.unsplash.com/photo-1606593954899-736ae87e3066?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2501&q=80"
+            alt="House with road"
+          />
+          <figcaption>Grew up on</figcaption>
+        </figure>
+      </div>
+
+      <div class="card-back">
+        <!-- only if the image is necessary -->
+        <figure>
+          <div class="img-bg"></div>
+          <img
+            src="https://images.unsplash.com/photo-1606593954899-736ae87e3066?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2501&q=80"
+            alt="House with road"
+          />
+        </figure>
+
+        <span class="design">Grove Road</span>
       </div>
     </div>
   </div>
