--- a/layouts/partials/introduction.html
+++ b/layouts/partials/introduction.html
@@ -247,6 +247,36 @@
         <figure>
           <div class="img-bg"></div>
           <img
+            src="images/cordovahigh.jpg"
+            alt="Cordova High"
+          />
+          <figcaption>High School</figcaption>
+        </figure>
+      </div>
+
+      <div class="card-back">
+        <!-- only if the image is necessary -->
+        <figure>
+          <div class="img-bg"></div>
+          <img
+            src="images/cordovahigh.jpg"
+            alt="Cordova High"
+          />
+        </figure>
+
+        <span class="design">Cordova High School</span>
+      </div>
+    </div>
+  </div>
+  <!-- /flip-card-container -->
+
+  <!-- flip-card-container -->
+  <div class="flip-card-container" style="--hue: 350">
+    <div class="flip-card">
+      <div class="card-front">
+        <figure>
+          <div class="img-bg"></div>
+          <img
             src="https://images.unsplash.com/photo-1526509813677-4d4f89aa6f9a?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"
             alt="Lilac"
           />
