relationship and work

--- a/layouts/partials/introduction.html
+++ b/layouts/partials/introduction.html
@@ -66,6 +66,59 @@
       <div class="card-front">
         <figure>
           <div class="img-bg"></div>
+          <img src="https://images.unsplash.com/photo-1518199266791-5375a83190b7?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2550&q=80" alt="hearts" />
+          <figcaption>Relationship Status</figcaption>
+        </figure>
+      </div>
+
+      <div class="card-back">
+        <figure>
+          <div class="img-bg"></div>
+          <img src="https://images.unsplash.com/photo-1518199266791-5375a83190b7?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2550&q=80" alt="hearts" />
+        </figure>
+
+        <span class="design">
+          ❤️❤️❤️ <br />
+          In a relationship <br />
+          ❤️❤️❤️
+        </span>
+      </div>
+    </div>
+  </div>
+  <!-- /flip-card-container -->
+
+  <!-- flip-card-container -->
+  <div class="flip-card-container" style="--hue: 170">
+    <div class="flip-card">
+      <div class="card-front">
+        <figure>
+          <div class="img-bg"></div>
+          <img src="images/mhelogo.png" alt="McGraw Hill Education" />
+          <figcaption>Work</figcaption>
+        </figure>
+      </div>
+
+      <div class="card-back">
+        <figure>
+          <div class="img-bg"></div>
+          <img src="images/mhelogo.png" alt="McGraw Hill Education" />
+        </figure>
+
+        <span class="design">
+          McGraw Hill Education <br />
+          Title: Principal Software Engineer
+        </span>
+      </div>
+    </div>
+  </div>
+  <!-- /flip-card-container -->
+
+  <!-- flip-card-container -->
+  <div class="flip-card-container" style="--hue: 170">
+    <div class="flip-card">
+      <div class="card-front">
+        <figure>
+          <div class="img-bg"></div>
           <img src="images/nolo.jpg" alt="Home" />
           <figcaption>Address</figcaption>
         </figure>
