--- a/layouts/partials/introduction.html
+++ b/layouts/partials/introduction.html
@@ -66,7 +66,10 @@
       <div class="card-front">
         <figure>
           <div class="img-bg"></div>
-          <img src="https://images.unsplash.com/photo-1518199266791-5375a83190b7?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2550&q=80" alt="hearts" />
+          <img
+            src="https://images.unsplash.com/photo-1518199266791-5375a83190b7?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2550&q=80"
+            alt="hearts"
+          />
           <figcaption>Relationship Status</figcaption>
         </figure>
       </div>
@@ -74,7 +77,10 @@
       <div class="card-back">
         <figure>
           <div class="img-bg"></div>
-          <img src="https://images.unsplash.com/photo-1518199266791-5375a83190b7?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2550&q=80" alt="hearts" />
+          <img
+            src="https://images.unsplash.com/photo-1518199266791-5375a83190b7?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2550&q=80"
+            alt="hearts"
+          />
         </figure>
 
         <span class="design">
@@ -299,10 +305,7 @@
       <div class="card-front">
         <figure>
           <div class="img-bg"></div>
-          <img
-            src="images/cordovahigh.jpg"
-            alt="Cordova High"
-          />
+          <img src="images/cordovahigh.jpg" alt="Cordova High" />
           <figcaption>High School</figcaption>
         </figure>
       </div>
@@ -311,10 +314,7 @@
         <!-- only if the image is necessary -->
         <figure>
           <div class="img-bg"></div>
-          <img
-            src="images/cordovahigh.jpg"
-            alt="Cordova High"
-          />
+          <img src="images/cordovahigh.jpg" alt="Cordova High" />
         </figure>
 
         <span class="design">Cordova High School</span>
