--- a/layouts/partials/introduction.html
+++ b/layouts/partials/introduction.html
@@ -216,6 +216,41 @@
         <figure>
           <div class="img-bg"></div>
           <img
+            src="https://images.unsplash.com/photo-1536440136628-849c177e76a1?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2125&q=80"
+            alt="Cinema"
+          />
+          <figcaption>Favorite Movies</figcaption>
+        </figure>
+      </div>
+
+      <div class="card-back">
+        <!-- only if the image is necessary -->
+        <figure>
+          <div class="img-bg"></div>
+          <img
+            src="https://images.unsplash.com/photo-1536440136628-849c177e76a1?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2125&q=80"
+            alt="Cinema"
+          />
+        </figure>
+
+        <span class="design">
+          - 13 Going On 30 <br />
+          - Hackers <br />
+          - Titanic <br />
+          - Forgetting Sarah Marshall
+        </span>
+      </div>
+    </div>
+  </div>
+  <!-- /flip-card-container -->
+
+  <!-- flip-card-container -->
+  <div class="flip-card-container" style="--hue: 350">
+    <div class="flip-card">
+      <div class="card-front">
+        <figure>
+          <div class="img-bg"></div>
+          <img
             src="https://images.unsplash.com/photo-1602941953280-ea523175bcfc?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=681&q=80"
             alt="Dog"
           />
