--- a/themes/hallo/layouts/partials/head.html
+++ b/themes/hallo/layouts/partials/head.html
@@ -1,15 +1,15 @@
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  {{- if .IsHome }}
-  <meta name="description" content="{{ .Site.Params.Description }}" />
-  {{- else if .Description }}
-  <meta name="description" content="{{ .Description }}" />
-  {{- end }}
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {{- if .IsHome }}
+        <meta name="description" content="{{ .Site.Params.Description }}">
+    {{- else if .Description }}
+        <meta name="description" content="{{ .Description }}">
+    {{- end }}
 
-  <!-- HTML Meta Tags -->
-  <title>Ashley Ivy Hutson's Personal Data</title>
-  <meta name="description" content="Screw privacy, Here is my data." />
+    <!-- HTML Meta Tags -->
+    <title>Ashley Ivy Hutson's Personal Data</title>
+    <meta name="description" content="Screw privacy, Here is my data.">
 
   <!-- Facebook Meta Tags -->
   <meta property="og:url" content="https://www.screwmyprivacy.com" />
@@ -26,45 +26,35 @@
   <meta name="twitter:description" content="Screw privacy, Here is my data." />
   <meta name="twitter:image" content="https://www.screwmyprivacy.com/images/portrait.jpg" />
 
-  <title>
-    {{- if .IsHome }} {{ .Site.Title }} {{- else }} {{ .Title }} &middot; {{
-    .Site.Title }} {{- end }}
-  </title>
+    <title>
+        {{- if .IsHome }}
+            {{ .Site.Title }}
+        {{- else }}
+            {{ .Title }} &middot; {{ .Site.Title }}
+        {{- end }}
+    </title>
 
-  <!-- CSS -->
-  {{- $inServerMode := .Site.IsServer }} {{- $cssTarget := "css/style.css" }}
-  {{- $cssOptions := cond ($inServerMode) (dict "targetPath" $cssTarget
-  "enableSourceMap" true) (dict "targetPath" $cssTarget "outputStyle"
-  "compressed") }} {{- $style := resources.Get "scss/hallo.scss" |
-  resources.ExecuteAsTemplate "style.hallo.scss" . | toCSS $cssOptions }}
-  <link rel="stylesheet" href="{{ $style.RelPermalink }}" />
+    <!-- CSS -->
+    {{- $inServerMode	:= .Site.IsServer }}
+    {{- $cssTarget		:= "css/style.css" }}
+    {{- $cssOptions		:= cond ($inServerMode) (dict "targetPath" $cssTarget "enableSourceMap" true) (dict "targetPath" $cssTarget "outputStyle" "compressed") }}
+    {{- $style			:= resources.Get "scss/hallo.scss" | resources.ExecuteAsTemplate "style.hallo.scss" . | toCSS $cssOptions }}
+    <link rel="stylesheet" href="{{ $style.RelPermalink }}">
 
-  <link
-    rel="stylesheet"
-    href="https://fonts.googleapis.com/css?family=Montserrat:400,700"
-  />
-  <link
-    rel="stylesheet"
-    href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css"
-    crossorigin="anonymous"
-  />
-  <link
-    rel="stylesheet"
-    href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-    crossorigin="anonymous"
-  />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
-  <!-- Favicon -->
-  <link rel="apple-touch-icon" sizes="180x180" href="{{ "apple-touch-icon.png" |
-  relURL }}"> <link rel="icon" type="image/png" sizes="32x32" href="{{
-  "favicon-32x32.png" | relURL }}"> <link rel="icon" type="image/png"
-  sizes="16x16" href="{{ "favicon-16x16.png" | relURL }}"> <link rel="manifest"
-  href="{{ "site.webmanifest" | relURL }}">
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ "apple-touch-icon.png" | relURL }}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ "favicon-32x32.png" | relURL }}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ "favicon-16x16.png" | relURL }}">
+    <link rel="manifest" href="{{ "site.webmanifest" | relURL }}">
 
-  <!-- RSS -->
-  <link href="{{ with .OutputFormats.Get "RSS" }}{{ .RelPermalink }}{{ end }}"
-  rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" /> {{ if
-  hugo.Environment | eq "production" }} {{ template
-  "_internal/google_analytics_async.html" . }} {{ end }}
+    <!-- RSS -->
+    <link href="{{ with .OutputFormats.Get "RSS" }}{{ .RelPermalink }}{{ end }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
+
+    {{ if hugo.Environment | eq "production" }}
+        {{ template "_internal/google_analytics_async.html" . }}
+    {{ end }}
 </head>
