--- a/layouts/partials/introduction.html
+++ b/layouts/partials/introduction.html
@@ -177,33 +177,35 @@
   <!-- /flip-card-container -->
 
   <!-- flip-card-container -->
-  <div class="flip-card-container" style="--hue: 350">
-    <div class="flip-card">
-      <div class="card-front">
-        <figure>
-          <div class="img-bg"></div>
-          <img
-            src="https://images.unsplash.com/photo-1526304640581-d334cdbbf45e?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"
-            alt="Money"
-          />
-          <figcaption>Salary</figcaption>
-        </figure>
-      </div>
+  <div class="hidden">
+    <div class="flip-card-container" style="--hue: 350">
+      <div class="flip-card">
+        <div class="card-front">
+          <figure>
+            <div class="img-bg"></div>
+            <img
+              src="https://images.unsplash.com/photo-1526304640581-d334cdbbf45e?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"
+              alt="Money"
+            />
+            <figcaption>Salary</figcaption>
+          </figure>
+        </div>
 
-      <div class="card-back">
-        <!-- only if the image is necessary -->
-        <figure>
-          <div class="img-bg"></div>
-          <img
-            src="https://images.unsplash.com/photo-1526304640581-d334cdbbf45e?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"
-            alt="Money"
-          />
-        </figure>
+        <div class="card-back">
+          <!-- only if the image is necessary -->
+          <figure>
+            <div class="img-bg"></div>
+            <img
+              src="https://images.unsplash.com/photo-1526304640581-d334cdbbf45e?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"
+              alt="Money"
+            />
+          </figure>
 
-        <span class="design"
-          >$157,000 & <br />
-          10%-20% Bonus</span
-        >
+          <span class="design"
+            >$157,000 & <br />
+            10%-20% Bonus</span
+          >
+        </div>
       </div>
     </div>
   </div>
