Fix portrait to be local

--- a/themes/hallo/layouts/partials/head.html
+++ b/themes/hallo/layouts/partials/head.html
@@ -16,7 +16,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Ashley Ivy Hutson's Personal Data" />
   <meta property="og:description" content="Screw privacy, Here is my data." />
-  <meta property="og:image" content="https://www.screwmyprivacy.com/images/portrait.jpg" />
+  <meta property="og:image" content="/images/portrait.jpg" />
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image" />
@@ -24,7 +24,7 @@
   <meta property="twitter:url" content="https://www.screwmyprivacy.com" />
   <meta name="twitter:title" content="Ashley Ivy Hutson's Personal Data" />
   <meta name="twitter:description" content="Screw privacy, Here is my data." />
-  <meta name="twitter:image" content="https://www.screwmyprivacy.com/images/portrait.jpg" />
+  <meta name="twitter:image" content="/images/portrait.jpg" />
 
     <title>
         {{- if .IsHome }}
