--- a/themes/hallo/assets/scss/hallo/_cards.scss
+++ b/themes/hallo/assets/scss/hallo/_cards.scss
@@ -50,13 +50,16 @@
 
   position: relative;
   transform-style: preserve-3d;
+  -webkit-transform-style: preserve-3d;
   transition: 0.6s 0.1s;
+  -webkit-transition: 0.6s 0.1s;    
 }
 
 /* hover and focus-within states */
 .flip-card-container:hover .flip-card,
 .flip-card-container:focus-within .flip-card {
   transform: rotateY(180deg);
+  -webkit-transform: rotateY(180deg);
 }
 
 /* .card-... */
@@ -90,19 +93,22 @@
     border-radius: 1000px;
     background: transparentize(#000000, 0.5);
     transition: 0.3s;
+    -webkit-transition: 0.3s;  
   }
 }
 
 /* .card-front */
 .card-front {
-  transform: rotateY(0deg);
-  z-index: 2;
+    z-index: 2;
+    transform: rotateY(0deg);
+    -webkit-transform: rotateY(0deg);
 }
 
 /* .card-back */
 .card-back {
-  transform: rotateY(180deg);
-  z-index: 1;
+    z-index: 1;
+    transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg);
 }
 
 /* figure */
@@ -165,6 +171,7 @@ figcaption {
   top: 34%;
   left: 50%;
   transform: translate(-50%, -50%) rotate(18deg);
+  -webkit-transform: translate(-50%, -50%) rotate(18deg);
 
   width: 100%;
   height: 6px;
@@ -173,6 +180,7 @@ figcaption {
   border-right-color: transparent;
 
   transition: 0.1s;
+  -webkit-transition: 0.1s;
 }
 
 .card-back .img-bg {
