--- a/themes/hallo/assets/scss/hallo/_cards.scss
+++ b/themes/hallo/assets/scss/hallo/_cards.scss
@@ -76,6 +76,7 @@
   overflow: hidden;
 
   backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
 
   display: flex;
   justify-content: center;
