--- a/layouts/partials/introduction.html
+++ b/layouts/partials/introduction.html
@@ -85,7 +85,7 @@
 
         <span class="design">
           ❤️❤️❤️ <br />
-          In a relationship <br />
+          Engaged <br />
           ❤️❤️❤️
         </span>
       </div>
@@ -112,7 +112,7 @@
 
         <span class="design">
           McGraw Hill Education <br />
-          Title: Principal Software Engineer
+          Title: Cloud Architecht
         </span>
       </div>
     </div>
