update work location and salary

--- a/layouts/partials/introduction.html
+++ b/layouts/partials/introduction.html
@@ -99,7 +99,7 @@
       <div class="card-front">
         <figure>
           <div class="img-bg"></div>
-          <img src="images/mhelogo.png" alt="McGraw Hill Education" />
+          <img src="images/coforma-logo.webp" alt="Coforma LLC" />
           <figcaption>Work</figcaption>
         </figure>
       </div>
@@ -107,12 +107,12 @@
       <div class="card-back">
         <figure>
           <div class="img-bg"></div>
-          <img src="images/mhelogo.png" alt="McGraw Hill Education" />
+          <img src="images/coforma-logo.webp" alt="Coforma LLC" />
         </figure>
 
         <span class="design">
-          McGraw Hill Education <br />
-          Title: Cloud Architecht
+          Coforma <br />
+          Title: Principal Software Engineer
         </span>
       </div>
     </div>
@@ -201,8 +201,8 @@
           </figure>
 
           <span class="design"
-            >$161,500 & <br />
-            10%-20% Bonus</span
+            >$172,500 & <br />
+            $5000 Bonus</span
           >
         </div>
       </div>
