--- a/layouts/partials/introduction.html
+++ b/layouts/partials/introduction.html
@@ -85,7 +85,7 @@
 
         <span class="design">
           ❤️❤️❤️ <br />
-          Engaged <br />
+          Married (Being a Wifey) <br />
           ❤️❤️❤️
         </span>
       </div>
@@ -107,7 +107,7 @@
       <div class="card-back">
         <figure>
           <div class="img-bg"></div>
-          <img style="margin-top: 4rem; margin-left: -5rem; block-size: 14.5rem;" src="images/coforma-logo.webp" alt="Coforma LLC" />
+          <img style="margin-top: 4rem; margin-left: -5rem; block-size: 14.5rem;" isrc="images/coforma-logo.webp" alt="Coforma LLC" />
         </figure>
 
         <span class="design">
