fix mismatched quotes

--- a/layouts/partials/introduction.html
+++ b/layouts/partials/introduction.html
@@ -99,7 +99,7 @@
       <div class="card-front">
         <figure>
           <div class="img-bg"></div>
-          <img style="margin-top: 4rem; margin-left: -5rem; block-size: 14.5rem;"" src="images/coforma-logo.webp" alt="Coforma LLC" />
+          <img style="margin-top: 4rem; margin-left: -5rem; block-size: 14.5rem;" src="images/coforma-logo.webp" alt="Coforma LLC" />
           <figcaption>Work</figcaption>
         </figure>
       </div>
